pod-security-vpol/baseline/disallow-host-process/.chainsaw-test/ephemeral-rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:admission-controller:disallow-host-process:ephemeralcontainers
  labels:
    rbac.kyverno.io/aggregate-to-admission-controller: "true"
    app.kubernetes.io/component: admission-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
rules:
- apiGroups: [""]
  resources: ["pods/ephemeralcontainers"]
  verbs: ["get", "list", "watch", "update"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:reports-controller:disallow-host-process:ephemeralcontainers-read
  labels:
    rbac.kyverno.io/aggregate-to-reports-controller: "true"
    app.kubernetes.io/component: reports-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
rules:
- apiGroups: [""]
  resources: ["pods/ephemeralcontainers"]
  verbs: ["get", "list", "watch"]
