pod-security-vpol/baseline/disallow-host-process/.chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01-new
spec:
  hostNetwork: true
  initContainers:
  - name: busybox01-init
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02-new
spec:
  hostNetwork: true
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03-new
spec:
  hostNetwork: true
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  hostNetwork: true
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
  - name: container02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  hostNetwork: true
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  hostNetwork: true
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  hostNetwork: true
  initContainers:
  - name: initcontainer01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
  - name: initcontainer02
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      windowsOptions:
        hostProcess: true
---
