pod-security-vpol/baseline/disallow-host-process/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: busybox01-init
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          windowsOptions:
            hostProcess: false
      containers:
      - name: busybox01
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          windowsOptions:
            hostProcess: false
      - name: busybox02
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01-new
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: Never
          initContainers:
          - name: busybox01-init
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              windowsOptions:
                hostProcess: false
          containers:
          - name: busybox01
            image: ghcr.io/kyverno/test-busybox:1.35
          - name: busybox02
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              windowsOptions:
                hostProcess: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          windowsOptions:
            hostProcess: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
      - name: container02
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          windowsOptions:
            hostProcess: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      initContainers:
      - name: initcontainer01
        image: ghcr.io/kyverno/test-busybox:1.35
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      initContainers:
      - name: initcontainer01
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          windowsOptions:
            hostProcess: false
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      hostNetwork: true
      initContainers:
      - name: initcontainer01
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          windowsOptions:
            hostProcess: false
      - name: initcontainer02
        image: ghcr.io/kyverno/test-busybox:1.35
      containers:
      - name: container01
        image: ghcr.io/kyverno/test-busybox:1.35
        securityContext:
          windowsOptions:
            hostProcess: false
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          hostNetwork: true
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          hostNetwork: true
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              windowsOptions:
                hostProcess: false
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          hostNetwork: true
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
          - name: container02
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              windowsOptions:
                hostProcess: false
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          hostNetwork: true
          initContainers:
          - name: initcontainer01
            image: ghcr.io/kyverno/test-busybox:1.35
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          hostNetwork: true
          initContainers:
          - name: initcontainer01
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              windowsOptions:
                hostProcess: false
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          hostNetwork: true
          initContainers:
          - name: initcontainer01
            image: ghcr.io/kyverno/test-busybox:1.35
          - name: initcontainer02
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              windowsOptions:
                hostProcess: false
          containers:
          - name: container01
            image: ghcr.io/kyverno/test-busybox:1.35
            securityContext:
              windowsOptions:
                hostProcess: false
